<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_100"
            android:src="@drawable/android" />

        <com.chs.lib_common_ui.widget.ClearEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@null"
            android:hint="@string/login_username"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textColor="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_15" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40" />

        <com.chs.lib_common_ui.widget.ClearEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@null"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textColor="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_15" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40" />

        <TextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_60"
            android:text="@string/login_go_to_register"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_40"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login_login"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/dp_15" />
    </LinearLayout>

</FrameLayout>